; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/kvm/extr_vz.c_is_eva_access.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/kvm/extr_vz.c_is_eva_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.mips_instruction = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32 }

@spec3_op = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @is_eva_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_eva_access(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %union.mips_instruction, align 8
  %5 = bitcast %union.mips_instruction* %4 to { i64, i32 }*
  %6 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %5, i32 0, i32 0
  store i64 %0, i64* %6, align 8
  %7 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %5, i32 0, i32 1
  store i32 %1, i32* %7, align 8
  %8 = bitcast %union.mips_instruction* %4 to %struct.TYPE_2__*
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @spec3_op, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

14:                                               ; preds = %2
  %15 = bitcast %union.mips_instruction* %4 to %struct.TYPE_2__*
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  switch i32 %17, label %19 [
    i32 136, label %18
    i32 135, label %18
    i32 143, label %18
    i32 133, label %18
    i32 131, label %18
    i32 132, label %18
    i32 130, label %18
    i32 129, label %18
    i32 128, label %18
    i32 134, label %18
    i32 141, label %18
    i32 139, label %18
    i32 142, label %18
    i32 140, label %18
    i32 138, label %18
    i32 137, label %18
  ]

18:                                               ; preds = %14, %14, %14, %14, %14, %14, %14, %14, %14, %14, %14, %14, %14, %14, %14, %14
  store i32 1, i32* %3, align 4
  br label %20

19:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %18, %13
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
